# tictac

./: .clang-format  CMakeLists.txt  Makefile
src/: CMakeLists.txt  main.cpp  test_tictac.cpp  tictac.h
